# cyclicism

./: .gitignore  Cargo.toml  LICENSE  Pulumi.yaml  README.md  index.ts  nextjs.ts  package.json  tsconfig.json
crisp/: README.md  package-lock.json  package.json
crisp/.open-next/assets/_next/static/chunks/app/: layout-2d15400eff3855af.js  page-19068584823fdaa8.js
crisp/.open-next/cache/LNrCsjhOsG_G-dkaO-dQu/: 500.html  _not-found.html  _not-found.rsc  index.html  index.rsc
crisp/.open-next/image-optimization-function/: index.mjs
crisp/.open-next/revalidation-function/: prerender-manifest.json
crisp/.open-next/server-function/: cache.cjs  index.mjs
crisp/.open-next/server-function/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  required-server-files.json
crisp/.open-next/server-function/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
crisp/.open-next/server-function/.next/server/app/: page.js  page_client-reference-manifest.js
crisp/.open-next/server-function/.next/server/chunks/: 892.js  948.js
crisp/.open-next/warmer-function/: index.mjs
crunch/: .gitignore  Cargo.toml  example_current.json  hot_reload.sh
crunch/migrations/: 0.sql  1.sql
crunch/src/: api.rs  cleaner.rs  cli.rs  mydrant.rs  nyt.rs  pg.rs  updater.rs
crunch/src/api/: combos_on_date.rs  mod.rs
scripts/: start_qdrant.sh
src/: cleaner.rs  cli.rs  embeddor.rs  lib.rs  mydrant.rs  nyt.rs  pg.rs  scraper.rs
(+3 files in other folders)
